adjust folder catalog

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,23 @@
-MessageSystem.sln
-Library
-Logs
-Temp
-Assembly-CSharp.csproj
+/Assets/ZTest
+/[Ll]ibrary
+/[Ll]ogs/
+/[Tt]emp/
+/[Oo]bj/
+/[Bb]uild/
+/[Bb]uilds/
+/.vs/
+/.vscode/
+/.idea/
+
+*.csproj
+*.unityproj
+*.booproj
+*.sln
+*.suo
+*.tmp
+*.user
+*.userprefs
+*.pidb
+*.svd
+*.meta
+
